ch22/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubebook-ch22-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubebook-ch22-app
  template:
    metadata:
      labels:
        app: kubebook-ch22-app
    spec:
      containers:
        - name: tomcat
          image: kubebook-ch22-app:1
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: kubebook-ch22-app
spec:
  selector:
    app: kubebook-ch22-app
  ports:
    - port: 8080
      targetPort: http
