ch22/k8s/queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubebook-ch22-queue
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kubebook-ch22-queue
  template:
    metadata:
      labels:
        app: kubebook-ch22-queue
    spec:
      hostname: kubebook-ch22-queue
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kubebook-ch22-queue-data
      containers:
        - name: rabbitmq
          image: rabbitmq:4.2.9-alpine
          ports:
            - name: amqp
              containerPort: 5672
          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq
          readinessProbe:
            tcpSocket:
              port: 5672
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: kubebook-ch22-queue
spec:
  selector:
    app: kubebook-ch22-queue
  ports:
    - port: 5672
      targetPort: amqp
