ch22/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubebook-ch22-ingress
spec:
  ingressClassName: cloud-provider-kind
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubebook-ch22-app
                port:
                  number: 8080
